# ML_Blindness_Detection

./: README.md  pyproject.toml  requirements.txt
code/: model.ipynb
tg_bot_model/: TG_BOT_EYECARE.py  config.py  demo.ipynb  model_NEW.ipynb  model_pred.py
